--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ name: Alex Minnaar
 description: >
     Alex Minnaar's Blog
 about: >
-    Welcome to my blog.  My name is Alex Minnaar and I work in the areas of machine learning/data science/software engineering.  In terms of machine learning I have experience with deep learning, natural langage processing, and recommender systems as well as ML frameworks such as TensorFlow, Keras, CoreNLP, MALLET, and Spark MLlib.  In terms of software engineering I haved worked with languages such as Scala, Python, and C++ along with distributed processing frameworks like Apache Spark and low-level frameworks like CUDA C.  
-master_repo: false
+    Welcome to my blog, I hope you enjoy it.  My name is Alex Minnaar and I work in the areas of machine learning/data science/software engineering. My contact info's on the top right if you'd like to reach out.
 url: ""
 markdown: kramdown
 highlighter: rouge
